test/tests/stages/9_functions/valid/no_arguments/precedence.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(three)
  (
  void
  )
  {
  return
  const int(3)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  !
  identifier(three)
  (
  )
  ;
  }
