test/tests/stages/9_functions/invalid_types/extra_credit/switch_on_function.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(f)
  (
  void
  )
  ;
  switch
  (
  identifier(f)
  )
  return
  const int(0)
  ;
  }
